Fix auto-zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body {
   padding: 0.2rem 0.5rem;
   border: none;
   border-radius: 5px;
+  font-size: 1rem;
 }
 
 #add {
